fixed z-index display bug on schedule page due to sessionize script setting improper z-index values

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1916,10 +1916,16 @@ footer {
 
 //Schedule page
 .schedule {
-	//width: 100%;
 	.schedule-index-page {
 		
 	}
+}
+
+/* override the z-index values introduced from sessionize javascript inclusion 
+   The schedule grid will overlap the blue top bar without the following ruleset 
+*/
+.sz-room, .sz-session {
+	z-index: 0 !important;
 }
 
 .final-row {
